# oskill

./: .coveragerc_p7b3  .coveragerc_p7b4  .gitignore  ADR-062.md  CHANGELOG.md  LICENSE  Oprim-CC-Prompts.md  Oskill-CC-Prompts.md  README.md  RELEASE_POLICY.md  SELF_CHECK_B10.md  SELF_CHECK_P6_B3.md  SELF_CHECK_P6_B4.md  current_exports.txt  integration_test_search.py  pyproject.toml
.github/: CODEOWNERS
docs/: COVERAGE_GAP_oskill.md  INDEX.md  candidate_pool_builder.md  regime_conditional_score_weighted.md  regime_smoothing.md
oskill/: __init__.py  _base.py  _manifest.py  _ontology_extract.py  _schemas.py  _two_step_ingest.py  _version.py  alert_suppress.py  app_upgrade_preflight.py  caddy_route_add.py  cognitive.py  cognitive_state.py  compose_drift_detect.py  container_health_aggregate.py  container_resource_rank.py  container_swap.py  deadman_evaluate.py  distribution.py  event_trail_correlate.py  factor.py  flapping_detect.py  hmm.py  hybrid_search.py  ingest_substrate.py  labeling.py  mean_reversion_compose.py  multi_node_health_sweep.py  node_register_probe.py  okx_liquidation_notional.py  performance.py  prediction.py  qmd_bridge.py  restart_and_verify.py  restore_from_backup.py  script_writer.py  similarity.py  socratic_loop.py  storyboard_planner.py  translate_substrate.py  trend_compose.py  (+3 more)
scripts/: check_init_refs.py
tests/: conftest.py  test_aegis_b3_composition.py  test_aegis_b3_pure_algo.py  test_aegis_oskills_batch2.py  test_aegis_oskills_batch3_4.py  test_agentic_investigate_loop.py  test_aii_k1_k2.py  test_aii_k3_k4.py  test_alert_suppress.py  test_asset_reference_inject.py  test_backtest_strategy_skills.py  test_batch_d.py  test_batch_generate_animations.py  test_batch_helivex_c.py  test_batch_hevi_f11.py  test_batch_md.py  test_cc_supplement_oskill.py  test_character_consistency_workflow.py  test_character_three_view.py  test_cognitive.py  test_comic_to_animation_workflow.py  (+62 more)
(+189 files in other folders)
